--- a/Windows/TripUpdateWindow.xaml
+++ b/Windows/TripUpdateWindow.xaml
@@ -1,21 +1,21 @@
-﻿<Window x:Class="TripCourseReservation.TripCreateWindow"
+﻿<Window x:Class="TripCourseReservation.TripUpdateWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TripCourseReservation"
         mc:Ignorable="d"
-        Title="TripCreateWindow" Height="715" Width="355">
+        Title="TripUpdateWindow" Height="745" Width="348">
     <Grid>
         <!--course details-->
-        <Label Content="Trip Creation" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="34" Width="312" FontSize="18" FontWeight="Bold"/>
+        <Label Content="Trip Update" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="34" Width="312" FontSize="18" FontWeight="Bold"/>
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="11,56,0,0" FontSize="14"><Run Text="Title"/><Run Text="*"/></TextBlock>
         <TextBox HorizontalAlignment="Left" Height="22" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="227" Margin="101,58,0,0"/>
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="11,97,0,0" FontSize="14" Text="Subtitle"/>
         <TextBox HorizontalAlignment="Left" Height="22" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="227" Margin="101,97,0,0"/>
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="11,135,0,0" FontSize="14"><Run Text="Description"/><Run Text="*"/></TextBlock>
         <TextBox HorizontalAlignment="Left" Height="70" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="227" Margin="101,136,0,0" />
-        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Transport" VerticalAlignment="Top" Margin="10,210,0,0" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Transport" VerticalAlignment="Top" Margin="10,213,0,0" FontSize="14"/>
         <RadioButton Content="Yes" HorizontalAlignment="Left" Margin="100,217,0,0" VerticalAlignment="Top" Width="50"/>
         <RadioButton Content="No" HorizontalAlignment="Left" Margin="149,217,0,0" VerticalAlignment="Top" Width="50" />
 
@@ -29,17 +29,20 @@
         <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="227" Margin="100,343,0,0" />
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="10,381,0,0" FontSize="14" Width="76" Text="Capacity"/>
         <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="227" Margin="100,382,0,0" />
-        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="10,420,0,0" FontSize="14" Width="86" Text="Pick-up place"/>
-        <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="227" Margin="101,418,0,0" />
-        <Button Content="Add Term" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="253,451,0,0"/>
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Transport inc." VerticalAlignment="Top" Margin="10,422,0,0" FontSize="14"/>
+        <RadioButton Content="Yes" HorizontalAlignment="Left" Margin="100,425,0,0" VerticalAlignment="Top" Width="50"/>
+        <RadioButton Content="No" HorizontalAlignment="Left" Margin="149,425,0,0" VerticalAlignment="Top" Width="50" />
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="10,457,0,0" FontSize="14" Width="86" Text="Pick-up place"/>
+        <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="227" Margin="101,455,0,0" />
+        <Button Content="Add Term" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="253,488,0,0"/>
+        <Button Content="Delete Term" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="172,488,0,0"/>
         <!--terms list-->
-        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="9,476,0,0" FontSize="14" Width="150" Text="Terms of current course"/>
-        <ListBox HorizontalAlignment="Left" Height="122" VerticalAlignment="Top" Width="318" Margin="9,500,0,0"/>
+        <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="9,513,0,0" FontSize="14" Width="150" Text="Terms of current course"/>
+        <ListBox HorizontalAlignment="Left" Height="122" VerticalAlignment="Top" Width="318" Margin="9,537,0,0"/>
 
         <!--save a cancel buttons-->
-        <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="252,636,0,0" Height="30"/>
-        <Button Content="Save" HorizontalAlignment="Left" VerticalAlignment="Top" Width="76" Margin="164,636,0,0" Height="30"/>
-       
-    </Grid>
+        <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="252,673,0,0" Height="30"/>
+        <Button Content="Save Changes" HorizontalAlignment="Left" VerticalAlignment="Top" Width="85" Margin="162,673,0,0" Height="30"/>
 
+    </Grid>
 </Window>
