--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,7 +14,8 @@
         <DockPanel Grid.RowSpan="2">
             <Menu DockPanel.Dock="Top">
                 <MenuItem Header="_File">
-                    <MenuItem Header="Import Data" />
+                    <MenuItem Header="Import Course Data" Click="onImportCourseData" />
+                    <MenuItem Header="Import Course Data" Click="onImportTripData" />
                     <MenuItem Header="Save" />
                     <Separator />
                     <MenuItem Header="Exit" />
