--- a/UpdateCourseWindow.xaml
+++ b/UpdateCourseWindow.xaml
@@ -26,7 +26,7 @@
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="205,55,0,0" FontSize="14"><Run FontWeight="Bold" Text="Terms"/></TextBlock>
         <ListBox HorizontalAlignment="Left" Height="166" VerticalAlignment="Top" Width="175" Margin="205,79,0,0"/>
         <Button Content="Add Term" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="305,255,0,0"/>
-        <Button Content="Update Term" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="205,255,0,0" Click="Button_Click"/>
+        <Button Content="Update Term" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="205,255,0,0" Click="onUpdateTerm"/>
         <Button Content="Remove Term" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="205,280,0,0"/>
 
         <!--buttons-->
